--- a/Reg.html
+++ b/Reg.html
@@ -1,2 +1,160 @@
 //Registration Form
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Event Registration</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      padding: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    form {
+      background: #fff;
+      padding: 20px;
+      max-width: 400px;
+      width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin: 20px 0;
+      text-align: left;
+    }
+
+    h2 {
+        color: #333;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 15px;
+      font-weight: bold;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 10px;
+      margin-top: 4px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+
+    button {
+      padding: 10px;
+      width: 100%;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: #0056b3;
+    }
+
+    #message {
+        margin-top: 20px;
+        font-size: 1.1em;
+        font-weight: bold;
+        color: #333;
+    }
+
+    /* Mobile responsiveness */
+    @media (max-width: 480px) {
+        body {
+            padding: 15px;
+        }
+        form {
+            box-shadow: none;
+            border: 1px solid #ddd;
+        }
+    }
+  </style>
+</head>
+<body>
+
+  <h2>Event Registration</h2>
+
+  <form id="registrationForm">
+    <label>
+      Full Name:
+      <input type="text" name="name" required>
+    </label>
+
+    <label>
+      Email:
+      <input type="email" name="email" required>
+    </label>
+
+    <label>
+      Phone:
+      <input type="tel" name="phone">
+    </label>
+
+    <label>
+      Select Event:
+      <select name="event" required>
+        <option value="">-- Choose an event --</option>
+        <option value="workshop">Workshop</option>
+        <option value="conference">Conference</option>
+        <option value="webinar">Webinar</option>
+      </select>
+    </label>
+
+    <button type="submit">Register</button>
+  </form>
+
+  <p id="message"></p>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        // 1. Get references to the form and the message paragraph
+        const form = document.getElementById('registrationForm');
+        const messageParagraph = document.getElementById('message');
+
+        // 2. Attach an event listener to the form submission
+        form.addEventListener('submit', function(event) {
+            // Stop the form from submitting in the traditional way (page refresh)
+            event.preventDefault();
+
+            // 3. Collect form data
+            const formData = new FormData(form);
+            const name = formData.get('name');
+            const email = formData.get('email');
+            const phone = formData.get('phone');
+            const eventType = formData.get('event');
+            
+            // 4. Simple validation (Checks if required fields are filled)
+            if (!name || !email || !eventType) {
+                 messageParagraph.textContent = 'Please fill out all required fields (Name, Email, Event).';
+                 messageParagraph.style.color = 'red';
+                 return;
+            }
+
+            // --- Simulated Submission / Confirmation ---
+            
+            // 5. Display confirmation message
+            messageParagraph.style.color = 'green';
+            messageParagraph.innerHTML = `
+                ✅ **Success!** Thank you, **${name}**, for registering!<br>
+                You are now signed up for the **${eventType.charAt(0).toUpperCase() + eventType.slice(1)}**.
+            `;
+
+            // 6. Clear the form after successful submission
+            form.reset(); 
+        });
+    });
+  </script>
+</body>
+</html>
 
